--- a/textual.html
+++ b/textual.html
@@ -1,1 +1,64 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Textual Answers - ProjectByAI</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Orbitron', sans-serif; }
+    body {
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #00ffe7;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 50px 20px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+      text-shadow: 0 0 10px #00ffe7;
+    }
+    p {
+      font-size: 1.1rem;
+      color: #c0f0ff;
+      max-width: 800px;
+      margin-bottom: 20px;
+    }
+    .back-btn {
+      margin-top: 30px;
+      padding: 10px 20px;
+      background-color: #00ffe7;
+      color: #000;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: bold;
+      box-shadow: 0 0 10px #00ffe7;
+      transition: 0.3s;
+    }
+    .back-btn:hover {
+      background-color: #00cbb9;
+    }
+    footer {
+      margin-top: auto;
+      color: #888;
+      font-size: 0.8rem;
+      padding-bottom: 20px;
+    }
+  </style>
+</head>
+<body>
+  <h1>📘 Textual Answers</h1>
+  <p>This section is under development. Soon, you’ll see a list of hand-written answers to common questions, fun facts, and useful information — all written in a clean, study-friendly format.</p>
+  <p>Stay tuned! Updates dropping faster than a school bell rings 🔔😉</p>
+  
+  <button class="back-btn" onclick="window.location.href='index.html'">⬅️ Go Back</button>
+  
+  <footer>Made by AmanAI & ChatGPT ⚡</footer>
+</body>
+</html>
+
