--- a/textual.html
+++ b/textual.html
@@ -12,45 +12,37 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       min-height: 100vh;
     }
 
     h1 {
-      margin-top: 50px;
-      font-size: 3em;
+      font-size: 2.8em;
       animation: fadeIn 1s ease-out;
+      margin-bottom: 30px;
     }
 
-    .grade-buttons {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 20px;
-      max-width: 600px;
-      margin-top: 50px;
-      width: 100%;
-      padding: 0 20px;
-      animation: slideUp 1.2s ease-out;
-    }
-
-    .grade-buttons a {
-      background: #1abc9c;
-      padding: 15px;
-      text-align: center;
+    select {
+      padding: 15px 20px;
+      font-size: 1.1em;
+      border: none;
       border-radius: 8px;
+      background: #1abc9c;
       color: white;
-      text-decoration: none;
-      font-size: 1.2em;
-      transition: 0.3s;
+      cursor: pointer;
+      appearance: none;
+      outline: none;
+      animation: slideDown 1.2s ease-out;
     }
 
-    .grade-buttons a:hover {
+    select:hover {
       background: #16a085;
-      transform: scale(1.05);
     }
 
     footer {
-      margin-top: auto;
-      padding: 20px;
+      position: absolute;
+      bottom: 15px;
+      text-align: center;
       font-size: 0.9em;
       color: #ccc;
       animation: fadeIn 2s ease-in;
@@ -61,25 +53,38 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    @keyframes slideUp {
-      from { opacity: 0; transform: translateY(30px); }
+    @keyframes slideDown {
+      from { opacity: 0; transform: translateY(-30px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <h1>📘 Select Your Class</h1>
-  <div class="grade-buttons">
-    <a href="class5.html">5th Standard</a>
-    <a href="class6.html">6th Standard</a>
-    <a href="class7.html">7th Standard</a>
-    <a href="class8.html">8th Standard</a>
-    <a href="class9.html">9th Standard</a>
-    <a href="class10.html">10th Standard</a>
-  </div>
+
+  <h1>📘 Choose Your Class</h1>
+
+  <select onchange="goToClass(this)">
+    <option disabled selected>Select a class</option>
+    <option value="class5.html">5th Standard</option>
+    <option value="class6.html">6th Standard</option>
+    <option value="class7.html">7th Standard</option>
+    <option value="class8.html">8th Standard</option>
+    <option value="class9.html">9th Standard</option>
+    <option value="class10.html">10th Standard</option>
+  </select>
 
   <footer>
     Maharashtra State Board | Powered by AI & Aman Intelligence ✨
   </footer>
+
+  <script>
+    function goToClass(select) {
+      const page = select.value;
+      if (page) {
+        window.location.href = page;
+      }
+    }
+  </script>
+
 </body>
 </html>
