--- a/textual.html
+++ b/textual.html
@@ -72,7 +72,8 @@
   </style>
 </head>
 <body>
-  <a href="textual.html" class="back-btn">← Back to Textual Answers</a>
+  <a href="textual.html" class="back-link">← Back</a>
+
 
   <div class="container">
     <h1>Class 5 Textual Answers</h1>
